--- a/yagpdb_docker/docker-compose.yml
+++ b/yagpdb_docker/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       # - "/app/yagpdb"
       - "-all"
       - "-pa"
-      - "-exthttps=false"
-      - "-https=true"
+      - "-exthttps=true"
+      - "-https=false"
     depends_on:
       - redis
       - db
@@ -34,7 +34,6 @@ services:
       - soundboard:/app/soundboard
     ports:
       - '5050:80'
-      - '5051:443'
     env_file:
       - app.env
 
